[project]
name = "app-login"
version = "0.1.0"
description = ""
authors = [
    {name = "edwdev-oficial",email = "edjdevel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "app_login", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
